fixed dynamic qty on amazon page but its taking too much time to load and finished the basics of react chapter1

--- a/javascript-amazon-project-main/styles/pages/amazon.css
+++ b/javascript-amazon-project-main/styles/pages/amazon.css
@@ -142,6 +142,10 @@
      be invisible. Use JavaScript to change the
      opacity and make it visible. */
   opacity: 0;
+  transition: opacity .5s ease-out;
+}
+.added{
+  opacity: 1;
 }
 
 .added-to-cart img {
